<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_sounds">
        <SwitchPreference
            android:defaultValue="true"
            android:key="sound_game"
            android:title="@string/pref_sound_game"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="sound_music"
            android:title="@string/pref_sound_music"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_account">
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <Preference
            android:title="@string/pref_account_change_avater_title"
            android:key="change_avatar" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="player_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->

        <Preference
            android:title="@string/pref_title_reset_account">
        </Preference>

        <Preference
            android:key="logout"
            android:title="@string/logout">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>