<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_archivements"
        android:icon="@drawable/ic_check"
        android:title="@string/title_achievements" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/title_stats" />

    <item
    android:id="@+id/navigation_contacts"
    android:icon="@drawable/ic_contacts"
    android:title="@string/title_contacts" />

</menu>
