<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <Preference
        android:title="Change avatar"
        />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="player_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->

    <Preference
        android:title="@string/pref_title_reset_account">
    </Preference>

    <Preference
        android:title="@string/logout">
    </Preference>

</PreferenceScreen>
