<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.game.quizee.ShopFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_stats"
            android:textSize="30sp"
            android:background="@drawable/button_tertiary_default"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:checked="false"
            android:id="@+id/stats_button"
            android:drawableLeft="@drawable/ic_stats"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Career_Achievements"
            android:textSize="30sp"
            android:background="@drawable/button_tertiary_default"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:checked="false"
            android:id="@+id/career_achievements_button"
            android:drawableLeft="@drawable/ic_check"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Category_Based_Achievements"
            android:textSize="30sp"
            android:background="@drawable/button_tertiary_default"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:checked="false"
            android:id="@+id/category_achievements_button"
            android:drawableLeft="@drawable/ic_category"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mode_Based_Achievements"
            android:textSize="30sp"
            android:background="@drawable/button_tertiary_default"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:checked="false"
            android:id="@+id/mode_achievements_button"
            android:drawableLeft="@drawable/ic_multi_player"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Epic_Achievements"
            android:textSize="30sp"
            android:background="@drawable/button_tertiary_default"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:checked="false"
            android:id="@+id/epic_achievements_button"
            android:drawableLeft="@drawable/ic_star"/>
    </LinearLayout>
</ScrollView>
