<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="400dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/end_single_play_summary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/end_felicitations"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_weight="0.20"
        android:background="@drawable/button_primary_default"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/end_good_answers"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_weight="0.15"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/achivements_earned"
        android:layout_weight="0.15"
        android:background="@drawable/button_primary_default"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/end_achievements_earned"
        android:layout_weight="0.30"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.20">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:id="@+id/end_play_again_button_yes"
            android:text="@string/replay"
            android:background="@drawable/button_tertiary_default"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:id="@+id/end_play_again_button_no"
            android:text="@string/dont_replay"
            android:background="@drawable/button_tertiary_default"/>

    </RelativeLayout>

</LinearLayout>