<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.game.quizee.SettingsActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:id="@+id/avatar"
                android:contentDescription="@string/avatar_contentDescription"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/fragment_title"
                android:layout_toEndOf="@id/avatar"
                android:text="name goes here"
                android:gravity="center"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:id="@+id/currency"
                android:gravity="center"
                android:layout_toStartOf="@+id/level"
                android:text="0$"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:id="@+id/level"
                android:gravity="center"
                android:background="@drawable/ic_star"
                android:layout_alignParentEnd="true"
                android:text="0"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        android:id="@+id/change_avatar"
        android:text="@string/change_avatar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/change_name"
        android:text="@string/change_name"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/change_password"
        android:text="@string/change_password"/>
    
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
</LinearLayout>
